--- a/src/views/pages/promocao.ejs
+++ b/src/views/pages/promocao.ejs
@@ -13,143 +13,61 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap"
-      rel="stylesheet"
-    />
-    
+
 
     <title>Promoção</title>
+
+    <style>
+        .body {
+            background: rgb(224, 214, 214);
+        }
+        .categoria-main {
+           
+            display: flex;
+            align-items: start;
+            justify-content: center;
+        }
+        .categoria-produtos{
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+
+        }
+        
+        .categoria-items-produtos{
+            max-width: 270px;   
+            display: flex;
+            /* border: 2px solid #111; */
+            flex-direction: column;
+            align-items: center;
+            margin: 10px;
+            padding: 10px;
+            background: #fff;
+            border-radius: 0.5rem;
+        }
+
+       
+          
+    </style>
 </head>
 <body>
         <%- include('../components/header.ejs') %>
     
     <main>
             
-        <div style="display: flex;  align-items: center; justify-content: center; margin: 20px 10px 40px 10px;">
+        <div class="categoria-main" >
             <% produtos.forEach(produto => { %>
               <div >
-                <% if (produto.ativo === 0) { %>
-                 <a href="/detalhesProduto/<%= produto.id %>">
+                <% if (produto.ativo === 1) { %>
+                 <a class="categoria-items-produtos" href="/detalhesProduto/<%= produto.id %>">
                    <img src="/img/Computador.jpg">
                    <h2 class="descricao">Destaque do Mês</h2>
-                   <h3 class="descricao"><%= produto.nome %> </h3>
-                   <p class="descricao"><%= produto.preco%> </p>
+                   <h3 class="descricao"><%= produto.nome%></h3>
+                   <p class="descricao"><%= produto.preco%></p>
                  </a>
-                <% }else{ %>
-                 
                 <% } %> 
-                  
               </div>
             <% });  %> 
-        </div>
-
-           
-    
-                <% for(let nrPagina = 1; nrPagina <= totalPagina; nrPagina++) { %> 
-                        <div style="display: flex; justify-content: center; align-items: center; flex-direction: column-reverse; width: 80vw;" class="informacoes">
-                            <a style="background-color: aqua; padding: 5px;" href="?page=<%= nrPagina %> "><%= nrPagina %></a>
-                        </div>                    
-                        
-                <% } %> 
-
-
-                <!-- <div class="produto">
-                    <img src="/img/Computador.jpg" alt="" id="imagem-produto">
-                    <div class="informacoes">
-                    <h2>Infos importantes sobre o produto</h2>
-                    </div>                    
-                    <div class="disponivel">
-                    <h3>DISPONÍVEL</h3>
-                    <h4>Compre agora</h4>
-                    </div>
-                    <img src="" alt="" id="estrelas">
-                    <div class="precosMobile">
-                    <h1>R$ 2412,00</h1>
-                    </div>
-                    <div class="jurosMobile">
-                    <h5>Em ate 12x sem juros</h5>
-                    </div>
-                    <div class="precos">
-                    <h6>De:R$ 2.850,00</h6>
-                    <h5>Por:R$ 2.412,00</h5>
-                    <p>Em até 12x no cartão</p>
-                    <h3>R$2.000,00</h3>
-                    <p=AVISTA id="avista">A VISTA</p>
-                    </div>
-                </div>
-                <div class="produto">
-                    <img src="/img/Processador.jpg" alt="" id="imagem-produto">
-                    <div class="informacoes"><h2>Infos importantes sobre o produto</h2>
-                    </div>
-                    <div class="disponivel">
-                    <h3>DISPONÍVEL</h3>
-                    <h4>Compre agora</h4>
-                    </div>
-                    <img src="" alt="" id="estrelas">
-                    <div class="precosMobile">
-                    <h1>R$ 2412,00</h1>
-                    </div>
-                    <div class="jurosMobile">
-                    <h5>Em ate 12x sem juros</h5>
-                    </div>
-                    <div class="precos">
-                    <h6>De:R$ 2.850,00</h6>
-                    <h5>Por:R$ 2.412,00</h5>
-                    <p>Em até 12x no cartão</p>
-                    <h3>R$2.000,00</h3>
-                    <p=AVISTA id="avista">A VISTA</p>
-                    </div>    
-                </div>
-                <div class="produto">
-                    <img src="/img/Ps5.jpg" alt="" id="imagem-produto">
-                    <div class="informacoes"><h2>Infos importantes sobre o produto</h2>
-                    </div>                       
-                    <div class="disponivel">
-                    <h3>DISPONÍVEL</h3>
-                    <h4>Compre agora</h4>
-                    </div>
-                    <img src="" alt="" id="estrelas">
-                    <div class="precosMobile">
-                    <h1>R$ 2412,00</h1>
-                    </div>
-                    <div class="jurosMobile">
-                    <h5>Em ate 12x sem juros</h5>
-                    </div>
-                    <div class="precos">
-                    <h6>De:R$ 2.850,00</h6>
-                    <h5>Por:R$ 2.412,00</h5>
-                    <p>Em até 12x no cartão</p>
-                    <h3>R$2.000,00</h3>
-                    <p=AVISTA id="avista">A VISTA</p>
-                    </div>    
-                </div>
-                <div class="produto">
-                    <img src="/img/3570943300_1.jpg" alt="" id="imagem-produto">
-                    <div class="informacoes"><h2>Infos importantes sobre o produto</h2>
-                    </div>
-                    <div class="disponivel">
-                    <h3>DISPONÍVEL</h3>
-                    <h4>Compre agora</h4>
-                    </div>
-                    <img src="" alt="" id="estrelas">
-                    <div class="precosMobile">
-                    <h1>R$ 2412,00</h1>
-                    </div>
-                    <div class="jurosMobile">
-                    <h5>Em ate 12x sem juros</h5>
-                    </div>
-                    <div class="precos">
-                    <h6>De:R$ 2.850,00</h6>
-                    <h5>Por:R$ 2.412,00</h5>
-                    <p>Em até 12x no cartão</p>
-                    <h3>R$2.000,00</h3>
-                    <p=AVISTA id="avista">A VISTA</p>
-                    </div>    
-                </div> -->
-             
-            </div>
-
         </div>
 
     </main>
