--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -1,4 +1,4 @@
-<header style="background-color: rgb(183, 228, 247);">
+<header >
   <div class="headerpai">
   <div class="logo">
       <span>D</span>ev<span>Game</span>
@@ -15,9 +15,11 @@
         <li><a href="/categorias">Produtos</a></li>
         <li><a href="#">Sobre</a></li>
         <li><a href="/login-cadastro">Login</a></li>
-        <li><a href="/admin/produtos">admin produtos teste</a></li>
+        
       </ul>
     </div>
+
+
     <div class="icon-car">
       <img
         class="icon"
