--- a/src/views/pages/login-cadastro.ejs
+++ b/src/views/pages/login-cadastro.ejs
@@ -28,16 +28,16 @@
         <div class="content">      
           <!--FORMULÁRIO DE LOGIN-->
           <div id="login">
-            <form method="post" action=""> 
+            <form method="post" action="/login"> 
               <h1>Login</h1> 
               <p> 
-                <label for="nome_login">Seu nome</label>
-                <input id="nome_login" name="nome_login" required="required" type="text" placeholder="ex. contato@htmlecsspro.com"/>
+                <label for="nome_login">Seu email</label>
+                <input id="nome_login" name="email" required="required" type="text" placeholder="ex. contato@htmlecsspro.com"/>
               </p>
                
               <p> 
-                <label for="email_login">Seu e-mail</label>
-                <input id="email_login" name="email_login" required="required" type="password" placeholder="ex. senha" /> 
+                <label for="email_login">Sua senha</label>
+                <input id="email_login" name="senha" required="required" type="password" placeholder="ex. senha" /> 
               </p>
                
               <p> 
@@ -63,17 +63,17 @@
                
               <p> 
                 <label for="nome_cad">Seu nome</label>
-                <input id="nome_cad" name="nome_cad" required="required" type="text" placeholder="nome" />
+                <input id="nome_cad" name="nome" required="required" type="text" placeholder="nome" />
               </p>
                
               <p> 
                 <label for="email_cad">Seu e-mail</label>
-                <input id="email_cad" name="email_cad" required="required" type="email" placeholder="contato@htmlecsspro.com"/> 
+                <input id="email_cad" name="email" required="required" type="email" placeholder="contato@htmlecsspro.com"/> 
               </p>
                
               <p> 
                 <label for="senha_cad">Sua senha</label>
-                <input id="senha_cad" name="senha_cad" required="required" type="password" placeholder="ex. 1234"/>
+                <input id="senha_cad" name="senha" required="required" type="password" placeholder="ex. 1234"/>
               </p>
                
               <p> 
