--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -1,12 +1,12 @@
-<footer>
+<footer class="fotter-pai">
    
     <div class="atendimentoUm">
         <h2>Em Caso de Dúvida Fale Conosco</h2>
       
-        <form>
+        <form class="formNewsLatter">
         <input type="text" name="name" placeholder="Digite Seu Nome">
         <input type="email" name="email" placeholder="Digite seu E-mail">
-                <input type="submit" value="Enviar">
+        <button type="submit" class="enviar">ENVIAR</button>
         </form>
        
     </div>
