--- a/src/views/pages/promocao.ejs
+++ b/src/views/pages/promocao.ejs
@@ -26,6 +26,7 @@
             display: flex;
             align-items: start;
             justify-content: center;
+            margin-top: 215px;
         }
         .categoria-produtos{
             width: 100%;
