--- a/src/public/style/home.css
+++ b/src/public/style/home.css
@@ -1,91 +1,80 @@
 * {
   box-sizing: border-box;
-  margin: 0;
   font-family: 'Poppins';
 }
-
-
-
-
-
-
-.homePrincipal{
-  display: flex;
-  justify-content: center;
-  
-  
+body {
+  margin: 0;
 }
-.homePrincipal img{
-  width: 100%;
-  height: 300px;
-}
-.homeInferior{
+/* sessão carrossel */
+
+header {
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 5%;
-  font-size: 18px;
-  
 }
-.homeInferior img{
-  width: 20%;
-  margin-top: 5%;
+.header {
+  height: 50px;
+  background-color: #ff0000;
+}
+.slider {
+  width: 100vw;
+ height: 600px;
+  overflow: hidden;
+}
+.slider--width {
+  height: 100%;
+  display: flex;
+  transition: all ease .3s;
+}
+.slider--item {
+  width: 100vw;
+  height: inherit;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-shadow: 0px 1px 1px #333;
+  font-size: 50px;
+}
+.slider--controls {
+  position: absolute;
+  z-index: 99;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.slider--control {
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 50%;
+  overflow: hidden;
+  cursor: pointer;
+}
+/* sessão carrossel */
+
+.categoria-main {
+         
+  display: flex;
+  align-items: start;
+  justify-content: center;
+}
+.categoria-produtos{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-@media screen and (max-width: 768px){
-  .menu{
-    display: none;
-    flex-direction: row;
-		justify-content: space-around;
-
-  }
-  .icon-car{
-    width: 2%;
-  }
-  .icon{
-    max-width:20px;
-    max-height:20px;
-    width:  auto;
-    height: auto;
-    margin-left: 10px;
-    margin-top: 7px;
-  }
-  .menumobile{
-    cursor: pointer;
-  }
-  .menumobile div{
-    width: 20px;
-    height: 2px;
-    background-color: black;
-    margin: 7px;
-
-  }
-  .destaques-dia .title .h2 {
-    color: #bc002e;
-    text-decoration: none;
-    font-size: 2.1875rem;
+.categoria-items-produtos{
+    max-width: 270px;   
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    font-family: 900 'Poppins' sans-serif;
-    font-size: 22px;
-  }
-  .destaques-dia .img-destaque {
-    /* padding: 1.875rem; */
-    margin-bottom: 35px;
-    width: 70%;
-  }
-  .destaques-dia .container {
-    margin-right: 2rem;
-    margin-left: 2rem;
-    background-color: white;
-    border-radius: 0.625rem;
-    margin-top: 2.5rem;
-    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
-  }
-  .description{
-    display: none;
-  }
-
-  
+    margin: 10px;
+    padding: 10px;
+    background: #fff;
+    border-radius: 0.5rem;
 }
