create contact form

--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -3,9 +3,9 @@
     <div class="atendimentoUm">
         <h2>Em Caso de Dúvida Fale Conosco</h2>
       
-        <form class="formNewsLatter">
-        <input type="text" name="name" placeholder="Digite Seu Nome">
-        <input type="email" name="email" placeholder="Digite seu E-mail">
+        <form class="formNewsLatter" method="POST" action="/home">
+        <input type="email" name="email" placeholder="Digite Seu Email">
+        <input type="text" name="mensagem" placeholder="Digite sua Mensagem">
         <button type="submit" class="enviar">ENVIAR</button>
         </form>
        
