--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -3,7 +3,7 @@
     <div class="atendimentoUm">
         <h2>Em Caso de Dúvida Fale Conosco</h2>
       
-        <form class="formNewsLatter" method="POST" action="/home">
+        <form class="formNewsLatter" method="POST" action="/contato">
         <input type="email" name="email" placeholder="Digite Seu Email">
         <input type="text" name="mensagem" placeholder="Digite sua Mensagem">
         <button type="submit" class="enviar">ENVIAR</button>
