--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -14,7 +14,7 @@
         <li><a href="/promocao">Promoções</a></li>
         <li><a href="/categorias">Produtos</a></li>
         <li><a href="#">Sobre</a></li>
-        <li><a href="/login-cadastro">Login</a></li>
+        <li><a href="/login-cadastro#paralogin">Login</a></li>
         
       </ul>
     </div>
