--- a/src/views/pages/painel-usuario.ejs
+++ b/src/views/pages/painel-usuario.ejs
@@ -37,10 +37,10 @@
                                     <div class="infospessoais">
                                         <span class="infospessoais2">
                                             Bem vindo,
-                                            Gabriel Renovato da Silva
+                                            <%= usuario.name  %> 
                                         </span>
                                         <span class="email">
-                                            gabriel_renovato@outlook.com
+                                            <%= usuario.email  %> 
                                         </span>
                                     </div>
                                 </div>
