--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -24,7 +24,7 @@
       <%- include('../components/header')  %> 
 
      <!-- sessão do carrossel -->
-    <a href="/painel-usuario" class="usuario">Bem vindo  </a>
+    <a href="/painel-usuario" class="usuario">Bem vindo <%= usuario.name  %> </a>
      <header>
       <div class="header"></div>
       <div class="slider">
