funçao click em produtos da categoria e algumas estilizaçoes

--- a/src/views/pages/categorias.ejs
+++ b/src/views/pages/categorias.ejs
@@ -158,11 +158,13 @@
             <div class="categoria-produtos">
                
                 <% produtos.forEach(produto => { %>
-                    <div class="categoria-items-produtos">
-                        <img src="/img/Computador.jpg ">
-                        <h2><%= produto.nome %> </h2>
-                        <h3><%= produto.preco%> </h3>
-                    </div>
+                    <a href="/detalhesProduto/<%= produto.id%>">
+                        <div class="categoria-items-produtos">
+                            <img src="/img/Computador.jpg ">
+                            <h2><%= produto.nome %> </h2>
+                            <h3><%= produto.preco%> </h3>
+                        </div>
+                    </a>
                        
                 <% });  %> 
 
