--- a/src/public/style/home.css
+++ b/src/public/style/home.css
@@ -47,17 +47,27 @@ header {
   align-items: center;
 }
 .slider--control {
-  width: 50px;
-  height: 50px;
-  background-color: #fff;
-  border-radius: 50%;
-  overflow: hidden;
-  cursor: pointer;
+  margin: 0 30px;
+  
 }
+
+.slider--control i {
+  color: #fff;
+}
+.slider--control i:hover {
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  background-color: #3A3A3A;
+  border-radius: 50%;
+  color: #fff;
+  overflow: hidden;
+  opacity: .6;
+}
+
 /* sessão carrossel */
 
-.categoria-main {
-         
+.categoria-main {       
   display: flex;
   align-items: start;
   justify-content: center;
@@ -77,4 +87,15 @@ header {
     padding: 10px;
     background: #fff;
     border-radius: 0.5rem;
+}
+.usuario{
+  margin-left: 1600px;
+  margin-top: -35px;
+  position: absolute;
+  border: 2px solid red;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: salmon;
+  color: white;
+  cursor: pointer;
 }
